[tool.poetry]
name = "asyncpg-type-issue"
version = "0.1.0"
description = ""
authors = ["negcx"]
readme = "README.md"
packages = [{include = "asyncpg_type_issue"}]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
